kubernetes/apps/resume/resume/cv/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:file-account"
  labels:
    app.kubernetes.io/name: &app resume
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: resume
spec:
  hostnames:
    - resume.${PROFESSIONAL_DOMAIN}
  parentRefs:
    - kind: Gateway
      name: public-gateway
      namespace: gateway
  rules:
    - backendRefs:
        - kind: Service
          name: resume-svc
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - kind: Service
          name: pdf-converter-svc
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /convert
